针对Blazor再进行demo历练

--- a/AAAThinking/生产力环境搭建.md
+++ b/AAAThinking/生产力环境搭建.md
@@ -8,7 +8,15 @@
 
 
 
-讨论利器  
+讨论利器  一些非常好的工具
+
+
+
+道术器  利器  工具的使用
+
+维持原有好的老工具 不断尝试比较  接触新工具
+
+比如 DBeaver vs HeidiSql
 
 
 
@@ -20,4 +28,24 @@
 
 
 
-## OS配置 搭建
+## Pycharm
+
+
+
+# OS配置 搭建
+
+## Windows
+
+
+
+
+
+
+
+## Linux
+
+
+
+
+
+## Mac
