更新对于性能监控建设技术文章的知识总结

--- a/Web Backend/性能监控平台.md
+++ b/Web Backend/性能监控平台.md
@@ -10,19 +10,35 @@ Grafana
 
 APM. RUM. Data center monitoring, end-user monitoring; backend, front-end, and web performance monitoring.  These are just some of the terms used to describe forms of monitoring for websites and web applications
 
+在一个项目的生命周期里，运行维护占据着很大的比重，在重要性上，它几乎与项目研发并驾齐驱。而在系统运维过程中，能够及时地发现问题并解决问题，是每一个团队的本职工作。
+
+
+
+监控平台 SRE DevOps
+
 
 
 ## 道术
+
+人类对事物变化的捕获和处理
+
+运动变化过程中的信息收集
 
 
 
 ## 6W1H
 
+监控的指标要如何选择呢？
+
+采集这些指标可以有哪些方法和途径呢？
+
+指标采集到之后又要如何处理和展示呢？
+
 
 
 ## 指标 维度
 
-
+### 硬性指标
 
 CPU
 
@@ -32,6 +48,8 @@ IO
 
 
 
+### 软指标
+
 RT RTT
 
 QPS
@@ -40,13 +58,11 @@ TPS
 
 
 
-
+### 前端指标
 
 首页加载
 
 白屏
-
-
 
 
 
@@ -71,3 +87,49 @@ devtools--lighthouse
 
 
 ## 监控系统或者平台
+
+ELK
+
+Grafana
+
+Prometheus
+
+
+
+## 前端性能监控和埋点
+
+前端性能监控主要还是数据上报方式，来统计前端系统数据，借助于监控大平台【后端】
+
+
+
+### 数据监控（监控用户行为）
+
+- PV/UV: PV(page view)：即页面浏览量或点击量；UV：指访问某个站点或点击某条新闻的不同 IP 地址的人数
+- 用户在每一个页面的停留时间
+- 用户通过什么入口来访问该网页
+- 用户在相应的页面中触发的行为，等...
+
+统计这些数据是有意义的，比如我们知道了用户来源的渠道，可以促进产品的推广，知道用户在每一个页面停留的时间，可以针对停留较长的页面，增加广告推送等等
+
+
+
+### 性能监控（监控页面性能）
+
+- 不同用户，不同机型和不同系统下的首屏加载时间
+- 白屏时间
+- http 等请求的响应时间
+- 静态资源整体下载时间
+- 页面渲染时间
+- 页面交互动画完成时间，等...
+
+这些性能监控的结果，可以展示前端性能的好坏，根据性能监测的结果可以进一步的去优化前端性能，尽可能的提高用户体验
+
+
+
+### 异常监控（监控产品、系统异常）
+
+及时的上报异常情况，可以避免线上故障的发上。虽然大部分异常可以通过 `try catch` 的方式捕获，但是比如内存泄漏以及其他偶现的异常难以捕获。常见的需要监控的异常包括：
+
+- Javascript 的异常监控
+- 样式丢失的异常监控
+
